# StrangeCharacters-Refactoring-Kata

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/src/: BadExample.cpp  BadExample.h  CMakeLists.txt  Character.cpp  Character.hpp  CharacterDataParser.cpp  CharacterDataParser.hpp  CharacterFactory.cpp  CharacterFactory.hpp  CharacterFinder.cpp  CharacterFinder.hpp  CharacterParser.cpp  CharacterParser.h  CharacterParser.hpp  main.cpp
cpp/test-catch2/: CMakeLists.txt  CharacterParserTest.cpp  CharactersTest.cpp  ExampleCharacterTestCase.cpp
cpp/test-doctest/: CMakeLists.txt  CharacterParserTest.cpp  CharactersTest.cpp  ExampleCharacterTestCase.cpp
cpp/test-gtest/: CMakeLists.txt  CharacterParserTest.cpp  CharactersTest.cpp  ExampleCharacterTestCase.cpp
csharp/: README.md
csharp/StrangeCharactersRefactoring/: StrangeCharactersRefactoring.sln
csharp/StrangeCharactersRefactoring/BadNamesExamples/: Example.cs  ExampleUsage.cs
csharp/StrangeCharactersRefactoring/Characters/: Character.cs  CharacterDataParser.cs  CharacterFactory.cs  CharacterFinder.cs  CharacterParser.cs  Characters.csproj  strange_characters.json
csharp/StrangeCharactersRefactoring/MainCharacters/: MainCharacters.csproj  Program.cs
csharp/StrangeCharactersRefactoring/TestCharacters/: CharacterDataParserTest.cs  CharacterParserTest.cs  CharactersTest.cs  ExampleCharacterTestCase.cs  TestCharacters.csproj
java/: README.md  pom.xml
php/: .gitignore  Dockerfile  README.md  composer.json  constants.php  entry_point.php  phpunit.xml  run.sh
php/resources/: strange_characters.json
php/src/StrangeCharacters/: Character.php  CharacterDataParser.php  CharacterFactory.php  CharacterFinder.php
php/tests/: CharacterDataParserTest.php  CharacterTest.php  ExampleCharacterTestCase.php
python/: README.md  main.py  strange_characters.json
python/src/: character.py  character_data_parser.py  character_factory.py
python/tests/: conftest.py  test_character_data_parser.py  test_character_examples.py  test_character_finder.py
(+18 files in other folders)
